--- a/cadastro.css
+++ b/cadastro.css
@@ -1,15 +1,56 @@
 body {
     height: 100vh;
     display: flex;
+    justify-content: center;
     align-items: center;
-    place-content: center;
+    background-color: #f3e8ff; 
+    font-family: Arial, sans-serif;
 }
-form{
-    flex-direction: column;
+
+form {
     display: flex;
+    flex-direction: column;
+    background-color: #db4bff3a; 
+    border-radius: 8px;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+    padding: 20px;
+    width: 500px;
 }
- 
+
+h1 {
+    text-align: center;
+    color: #6f42c1; 
+}
+
+label {
+    margin-top: 10px;
+    font-weight: bold;
+    color: #6f42c1; 
+}
+
 input {
-    flex-basis: 50px;
-   
+    margin-top: 5px;
+    padding: 10px;
+    border: 1px solid #b960f5; 
+    border-radius: 4px;
+}
+
+input:focus {
+    border-color: #6f42c1;
+    outline: none;
+    box-shadow: 0 0 0 0.2rem rgba(111, 66, 193, 0.25);
+}
+
+button {
+    margin-top: 15px;
+    padding: 10px;
+    background-color: #6f42c1; 
+    color: rgb(0, 0, 0);
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
+}
+
+button:hover {
+    background-color: #5a2f9c; 
 }
